# alma-onebot-bridge

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  README.zh-Hans.md  config.toml.example  docker-compose.yml
.github/: dependabot.yml
.github/actions/setup-mingw/: action.yml
.github/workflows/: desktop-packages.yml  docker-image.yml  macos-pkg.yml
scripts/: build-macos.sh  build-windows-cross.sh  build-windows-gnu.ps1  check-windows-cross.sh  package-macos-pkg.sh  package-windows-velopack.ps1  package-windows-velopack.sh  package-windows-zip.ps1  package-windows-zip.sh  release-version.sh  test-windows-packaging-macos.sh  verify-version.sh  version-lib.sh
skills/alma-channel-protocol/: SKILL.md
skills/alma-channel-protocol/references/: generate-response.md  message-format.md  reply-quoting.md
skills/alma-extensibility/: SKILL.md
skills/alma-extensibility/references/: cli-reference.md  rest-api.md
skills/alma-onebot-bridge/: SKILL.md
skills/alma-onebot-bridge/evals/: evals.json
skills/alma-onebot-bridge/references/: alma-ws-protocol.md  pitfalls.md
src/: alma.rs  alma_ws.rs  auth.rs  config.rs  face_map.rs  group_log.rs  lib.rs  main.rs  people.rs  pipeline.rs  server.rs  state.rs
src/docs/: DEVELOPMENT_KNOWLEDGE_BASE.md  alma-bridge-macos-v1-plan.md  onebot-v11-alma-integration.md  onebot-v11-protocol-spec.md
src/handlers/: http.rs  ws.rs
src/onebot/: api.rs  event.rs  mod.rs
