[package]
name = "alma-onebot-bridge"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
dirs = "6.0.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
turso = { version = "0.7.0-pre.10", default-features = false }
tokio-tungstenite = "0.26"
warp = { version = "0.4.3", features = ["server", "websocket"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
base64 = "0.22.1"
