[package]
name = "alma-onebot-bridge"
version = "0.2.2"
edition = "2024"
license = "AGPL-3.0-only"

[features]
# mimalloc 全局分配器在 lib.rs 注册为 #[global_allocator]，所有 bin（macOS/Linux
# 根 bin 与 Windows app bin）依赖本 lib 时自动继承同一分配器。windows-gnu 交叉
# 编译链路本就需要 MinGW C 编译器（aws-lc-sys），mimalloc 复用同一工具链。
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
async-broadcast = "0.7.2"
async-tungstenite = { version = "0.34.1", default-features = false, features = ["smol-runtime"] }
base64 = "0.22.1"
dirs = "6.0.0"
futures-lite = "2.6.1"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
mimalloc = { version = "0.1.52", optional = true }
smol = "2.0.2"
trillium = "1.3.0"
trillium-client = { version = "0.9.7", features = ["serde_json"] }
trillium-router = "0.5.2"
trillium-rustls = { version = "0.11.3", default-features = false, features = ["client", "platform-verifier", "aws-lc-rs", "tls12"] }
trillium-smol = "0.7.0"
trillium-websockets = "0.8.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
turso = { version = "0.7.0-pre.10", default-features = false }
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
toml = "1.1"
url = "2.5.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"
